<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:orientation="vertical" >
    
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="400dp"
        >
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <CheckBox 
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/MyName"
                />
            <CheckBox 
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/MyPhone"
                />
            <CheckBox 
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/MyAddress"
                />
            <CheckBox 
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/MyEmail"
                />
            <CheckBox 
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/MyWork"
                />
            <CheckBox 
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/MySchool"
                />
            <CheckBox 
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/MyCollage"
                />
            <CheckBox 
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/Mybirth"
                />
            <CheckBox 
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/MyWeb"
                />
            <CheckBox 
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/MybirthDay"
                />
            <CheckBox 
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/Mygender"
                />
            <CheckBox 
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/Mynblood"
                />
            <CheckBox 
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/Mylanguege"
                />
            <CheckBox 
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/MaritalStatus"
                />
            <CheckBox 
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/MyInfomation"
                />
            <CheckBox 
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/Myliketitle"
                />         
        </LinearLayout>
    </ScrollView>

</LinearLayout>
