<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        >
        <TextView 
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/This_version"
            android:gravity="center"
            />
        <TextView 
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:id="@+id/tv_SettingVersionCompanyInfo_thisVersion"
            android:text="V 1.0"
            android:gravity="center"
            />
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        >
        <TextView 
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/New_version"
            android:gravity="center"
            />
        <TextView 
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:id="@+id/tv_SettingVersionCompanyInfo_NewVersion"
            android:text="V 1.2"
            android:gravity="center"
            />
        <Button 
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/Update"
            android:id="@+id/btn_SettingVersionCompanyInfo_Update"
            />
    </LinearLayout>
	<ImageView
	    android:layout_width="100dp"
	    android:layout_height="100dp"
	    android:src="@drawable/ic_launcher"
	    android:layout_gravity="center"
	    android:layout_marginTop="5dp"
	    />
	<TextView 
	    android:layout_width="150dp"
	    android:layout_height="48dp"
	    android:text="@string/Company_name"
	    android:layout_gravity="center"
	    android:gravity="center"
	    />
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="48dp"
	    android:orientation="horizontal"
	    >
	    <TextView 
	        android:layout_width="100dp"
	        android:layout_height="match_parent"
	        android:text="@string/Info_Master"
	        android:gravity="center"
	        />
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:text="@string/Company_Master"
	        android:gravity="center"
	        />
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="48dp"
	    android:orientation="horizontal"
	    >
	    <TextView 
	        android:layout_width="100dp"
	        android:layout_height="match_parent"
	        android:text="@string/Info_Address"
	        android:gravity="center"
	        />
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:text="@string/Company_address"
	        android:gravity="center"
	        />
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="48dp"
	    android:orientation="horizontal"
	    >
	    <TextView 
	        android:layout_width="100dp"
	        android:layout_height="match_parent"
	        android:text="@string/Info_Email"
	        android:gravity="center"
	        />
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:text="@string/Company_Email"
	        android:gravity="center"
	        />
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="48dp"
	    android:orientation="horizontal"
	    >
	    <TextView 
	        android:layout_width="100dp"
	        android:layout_height="match_parent"
	        android:text="@string/Info_URL"
	        android:gravity="center"
	        />
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:text="@string/Company_URL"
	        android:gravity="center"
	        />
	</LinearLayout>
</LinearLayout>
