<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <ImageView 
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/iv_SettingallRewriteMyinfo_photo"
            android:src="@drawable/ic_launcher"
            android:layout_gravity="center"
            />
    <Button 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/btn_SettingallRewriteMyinfo_changePhoto"
        android:text="@string/Change"
        />
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginLeft="16dp" 
        android:layout_marginRight="16dp"
        >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView 
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="@string/MyName"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView 
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="@string/MyPhone"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView 
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="@string/MyAddress"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView 
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="@string/MyEmail"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView 
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="@string/MyWork"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView 
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="@string/MySchool"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView 
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="@string/MyCollage"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView 
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="@string/Mybirth"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView 
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="@string/MyWeb"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView 
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="@string/MybirthDay"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView 
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="@string/Mygender"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView 
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="@string/Mynblood"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView 
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="@string/Mylanguege"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView 
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="@string/MaritalStatus"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView 
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="@string/MyInfomation"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView 
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="@string/Myliketitle"
                android:gravity="center"
                />
        </LinearLayout>
        
    </LinearLayout>
    </ScrollView>
	<Button 
	    android:layout_width="100dp"
	    android:layout_height="wrap_content"
	    android:id="@+id/btn_SettingallRewriteMyinfo_Ok"
	    android:text="@string/OK"
	    android:layout_gravity="right"
	    />
</LinearLayout>
