<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    
    <Button 
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/Profile_rewrite"
        android:id="@+id/btn_SettingAll_RewriteMyProfile"
      	android:layout_gravity="center"
        />
    <Button 
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/Electronic_BusinessCard"
        android:id="@+id/btn_SettingAll_ElectronicBusinessCard"
      	android:layout_gravity="center"
        />
    <Button 
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/Ring_Setting"
        android:id="@+id/btn_SettingAll_RingSetting"
      	android:layout_gravity="center"
        />
    <Button 
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/Version_CompanyInfo"
        android:id="@+id/btn_SettingAll_VersionCompanyInfo"
      	android:layout_gravity="center"
        />
    <Button 
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/Rock_myApp"
        android:id="@+id/btn_SettingAll_RockMyapp"
      	android:layout_gravity="center"
        />
    <Button 
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/Exit_profileBoard"
        android:id="@+id/btn_SettingAll_ExitProfileBoard"
      	android:layout_gravity="center"
        />
    <Button 
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:text="test"
        android:id="@+id/btn_test"
        android:layout_marginTop="50dp"
        />
    <Button 
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:text="test"
        android:id="@+id/btn_test2"
        android:layout_marginTop="50dp"
        />
</LinearLayout>     