<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="48dp"
        >
        <TextView 
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/Setting_noticeBell"
            android:gravity="center"
            />
        <Switch 
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:id="@+id/sh_SettingGroupRingSetting_noticeBell"
            android:gravity="center"
            />
    </LinearLayout>
	<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="48dp"
        >
	    <TextView 
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/Setting_dailyBell"
            android:gravity="center"
            />
        <Switch 
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:id="@+id/sh_SettingGroupRingSetting_dailyBell"
            android:gravity="center"
            />
	</LinearLayout>
	<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="48dp"
        >
	    <TextView 
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/Setting_freeboardBell"
            android:gravity="center"
            />
        <Switch 
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:id="@+id/sh_SettingGroupRingSetting_freeboardBell"
            android:gravity="center"
            />
	</LinearLayout>
	<Button 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="test"
	    android:id="@+id/btn_SettingGroupRingSetting_Test"
	    />
</LinearLayout>
