<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp"
    android:orientation="vertical" >
    
    <TextView 
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:text="@string/Into_password"
        android:gravity="center"
        android:layout_gravity="center"
        />
    <TextView 
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:text="@string/Into_password_information"
        android:gravity="center"
        android:layout_gravity="center"
        />
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        >
        <EditText 
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/et_SettingAllIntopassword_num1"
            />
        <EditText 
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/et_SettingAllIntopassword_num2"
            />
        <EditText 
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/et_SettingAllIntopassword_num3"
            />
        <EditText 
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/et_SettingAllIntopassword_num4"
            />
    </LinearLayout>
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        >
        <Button 
            style="?android:attr/actionButtonStyle"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="1"
            android:id="@+id/btn_SettingAllIntoPassword_1"
            />
        <Button 
            style="?android:attr/actionButtonStyle"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="2"
            android:id="@+id/btn_SettingAllIntoPassword_2"
            />
        <Button 
            style="?android:attr/actionButtonStyle"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="3"
            android:id="@+id/btn_SettingAllIntoPassword_3"
            />
    </LinearLayout>
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        >
        <Button 
            style="?android:attr/actionButtonStyle"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="4"
            android:id="@+id/btn_SettingAllIntoPassword_4"
            />
        <Button 
            style="?android:attr/actionButtonStyle"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="5"
            android:id="@+id/btn_SettingAllIntoPassword_5"
            />
        <Button 
            style="?android:attr/actionButtonStyle"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="6"
            android:id="@+id/btn_SettingAllIntoPassword_6"
            />
    </LinearLayout>
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        >
        <Button 
            style="?android:attr/actionButtonStyle"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="7"
            android:id="@+id/btn_SettingAllIntoPassword_7"
            />
        <Button 
            style="?android:attr/actionButtonStyle"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="8"
            android:id="@+id/btn_SettingAllIntoPassword_8"
            />
        <Button 
            style="?android:attr/actionButtonStyle"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="9"
            android:id="@+id/btn_SettingAllIntoPassword_9"
            />
    </LinearLayout>
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        >
        <Button 
            style="?android:attr/actionButtonStyle"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="@string/Cancle"
            android:id="@+id/btn_SettingAllIntoPassword_cancle"
            />
        <Button 
            style="?android:attr/actionButtonStyle"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="0"
            android:id="@+id/btn_SettingAllIntoPassword_0"
            />
        <Button 
            style="?android:attr/actionButtonStyle"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="@string/OK"
            android:id="@+id/btn_SettingAllIntoPassword_OK"
            />
    </LinearLayout>

</LinearLayout>
